# agent-tools-local

./: .gitignore  README.md
media-process-local/: .env.example  .gitignore  README.md  pyproject.toml
media-process-local/skill/: SKILL.md
media-process-local/skill/references/: mcp_tools.md
media-process-local/src/mcp_media_process_local/: __init__.py  __main__.py  asr.py  downloader.py  pipeline.py  server.py
mineru-local/: README.md
mineru-local/mcp/: pyproject.toml
mineru-local/mcp/src/mcp_mineru_local/: __init__.py  server.py
mineru-local/skill/: SKILL.md
mineru-local/skill/references/: mcp_tools.md
vision-ingest-local/: .env.example  README.md  SKILL.md
vision-ingest-local/scripts/: check_vision.py  discover.py  interpret.py
