[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "media-process-local"
version = "0.1.0"
description = "MCP server + CLI: yt-dlp downloader + Qwen3-ASR local transcription"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Hermes Agent" },
]
dependencies = [
    "yt-dlp[default]>=2025",
    "qwen-asr[vllm]>=0.0.6",
    "fastmcp>=2.0",
    "pydub>=0.25",
    "httpx>=0.27",
    "openai>=2.32.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
mcp-media-process-local = "mcp_media_process_local.server:main"
media-pipeline = "mcp_media_process_local.pipeline:main"
media-dl = "mcp_media_process_local.downloader:main"

[project.urls]
Homepage = "https://github.com/nousresearch/hermes-agent"
Repository = "https://github.com/nousresearch/hermes-agent"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_media_process_local"]

[tool.uv]
package = true
